# VisTrace

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Program.cs  README.md  VisTrace.sln  VisTrace.styles.css  _Imports.razor  addon.json  index.html  index.md.html  package.bat  package_x64.bat  publish.bat  publish_x64.bat  site.webmanifest  vistrace_cslua_inject.lua  vistracing-in-one-weekend.md.html
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: showcase-addition.md
.github/PULL_REQUEST_TEMPLATE/: showcase.md
.github/workflows/: build.yml  build_and_deploy.yml  deploy.yml
Addon/: addon.json
Addon/lua/autorun/: vistrace_init.lua
Addon/lua/entities/gmod_wire_expression2/core/custom/: cl_vistrace_e2.lua  vistrace_e2.lua
Addon/lua/starfall/libs_cl/: vistrace_sf.lua
Addon/materials/vistrace/hdris/: README.md
Examples/Expression 2/: vistrace_e2_tracer_example.txt
Examples/StarfallEx/: vistrace_laser.txt
Module/: AccelStruct.cpp  AccelStruct.h  CMakeLists.txt  Utils.cpp  Utils.h  VisTrace.vcxproj  VisTrace.vcxproj.filters  main.cpp  premake5.lua
Module/include/: IRenderTarget.h  README.md
Module/source/: AccelStruct.cpp  AccelStruct.h  BSDF.cpp  BSDF.h  HDRI.cpp  HDRI.h  Helpers.cpp  Helpers.h  Sampler.h  Utils.cpp  Utils.h  VisTrace.cpp
Module/source/objects/: AccelStruct.cpp  AccelStruct.h  BSDF.cpp  BSDF.h  HDRI.cpp  HDRI.h  RenderTarget.cpp  RenderTarget.h  TraceResult.cpp  TraceResult.h
Pages/: Index.razor  Index.razor.css
Properties/: launchSettings.json
Shared/: BackgroundImage.razor  BackgroundImage.razor.css  ImageMosaic.razor  ImageMosaic.razor.css  MainLayout.razor  MainLayout.razor.css  QuickAccessButton.razor  QuickAccessButton.razor.css  ScrollDown.razor  ScrollDown.razor.css
VisTrace/: VisTrace.vcxproj  main.cpp
_framework/: Microsoft.AspNetCore.Components.Web.dll.br  Microsoft.AspNetCore.Components.dll.br  System.Collections.Concurrent.dll.br  System.Collections.dll.br  System.Linq.dll.br  System.Private.CoreLib.dll.br  System.Private.Runtime.InteropServices.JavaScript.dll.br  System.Private.Uri.dll.br  System.Runtime.dll.br  System.Text.Encodings.Web.dll.br  System.Text.Json.dll.br  VisTrace.dll.br  blazor.boot.json  blazor.boot.json.br
branding/: .gitignore
css/: app.css  book.css  site.css
include/: README.md  vistrace.h
include/vistrace/: IRenderTarget.h  ISampler.h  IVTFTexture.h  Structs.h
lua/autorun/: vistrace_init.lua
lua/starfall/libs_cl/: vistrace_sf.lua
lua/weapons/gmod_tool/stools/: bsdf_material.lua
materials/vistrace/: material_preview_hdri.vtf
materials/vistrace/material_preview/: gallery002.vtf
release/: INSTALL.md
source/: Utils.cpp  Utils.h  VisTrace.cpp
source/libraries/: BSDF.cpp  BSDF.h  ResourceCache.cpp  ResourceCache.h  Tonemapper.cpp  Tonemapper.h
source/objects/: AccelStruct.cpp  AccelStruct.h  BSDF.cpp  BSDF.h  HDRI.cpp  HDRI.h  Material.h  Model.cpp  Model.h  Primitives.h  RenderTarget.cpp  RenderTarget.h  Sampler.cpp  Sampler.h  SourceTypes.h  Tonemapper.cpp  Tonemapper.h  TraceResult.cpp  TraceResult.h  VTFTexture.cpp  VTFTexture.h
vistracing-in-one-weekend/: index.html  index.md.html  style.css
vistracing-in-one-weekend/source-code/: 1.2.lua  2.1.lua  2.3.lua  3.3.lua  3.7.lua  ray-tracer.lua
wwwroot/: browserconfig.xml  index.html  site.webmanifest
wwwroot/css/: app.css
wwwroot/vistracing-in-one-weekend/: index.md.html
wwwroot/vistracing-in-one-weekend/source-code/: 1.1.lua  2.4.lua  2.5.lua  2.6.lua  3.2.lua  3.3.lua  3.4.lua  3.5.lua  3.6.lua  ray-tracer.lua
